--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-<title>Oxymoron</title>
+<title>Nouvelles</title>
 
 <!- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -62,18 +62,18 @@
 	  
 	     
 <br><br><br><br>
-OXYMORON<br>
+NOUVELLES<br>
 par Charlie Batalla<br>
 <br>
-<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/index">Abracadabra</a><br>
-<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/caravane">Caravane</a><br>
-<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/lumiere_sur_la_nuit">Lumière sur la nuit</a><br>
-<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/quatre_saisons">Quatre saisons</a><br>
-<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/rave_party">Rave party</a><br>
+<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/index">Chapitre 01</a><br>
+<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/chapitre_02">Chapitre 02</a><br>
+<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/chapitre_03">Chapitre 03</a><br>
+<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/chapitre_04">Chapitre 04</a><br>
+<mark>-</mark> <a href="https://lcrtr.github.io/oxymoron/chapitre_05">Chapitre 05</a><br>
 <br><br><br><br>
 <br><br><br><br>
 
-Abracadabra<br>
+Chapitre 01<br>
 <br>
  
 <p>
