--- a/index.html
+++ b/index.html
@@ -79,14 +79,28 @@ Chapitre 01<br>
 <p>
 <mark>01</mark><br>       
 <br>
-Je brasse de l'air<br>
-pendant que Chuck Norris<br>
-tire à pile ou face<br>
-avec une bille, je regarde<br>
-par le trou du robinet<br>
-mais il me faut encore<br>
-composer le mot d'<br>
-anus-cyclope<br>
+Nos lèvres à l'entrée<br>
+de la bouche du métro<br>
+nous allons creuser un tunnel<br>
+et traverser<br>
+le sous-sol de la violence<br>
+ta capuche à cheveux<br>
+le K-Way ruisselant<br>
+nous sommes la frontière cobaye<br>
+entre la terre et l'espace<br>
+faits de désarroi intime<br>
+harpons de la solitude<br>
+nous cherchons<br>
+à détruire le fond angoissé<br>
+qui s'accumule à l'émotion<br>
+bien que les écrans<br>
+aient asséché le chemin des larmes<br>
+les fontaines dont l'eau brille<br>
+même de vieille pierre usée<br>
+pollution notre état<br>
+mes ongles colorés<br>
+paradoxe voisin<br>
+sont le rêve de pouvoir<br>
 <br>
 </p>
 
@@ -95,7 +109,9 @@ anus-cyclope<br>
 <p>
 <mark>02</mark><br>
 <br>
-Brian a lu mes textes<br>
+Les fontaines<br>
+dont l'eau brille<br>
+pierre usée<br>
 il m'avoue ne pas avoir tout pigé<br>
 il me dit que ce n'est pas la forme qui lui a plu<br>
 je continue dans le doute<br>
