--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ ta capuche à cheveux<br>
 le K-Way ruisselant<br>
 nous sommes la frontière cobaye<br>
 entre la terre et l'espace<br>
-faits de désarroi intime<br>
-harpons de la solitude<br>
+fait de désarroi intime<br>
+harpon de la solitude<br>
 nous cherchons<br>
 à détruire le fond angoissé<br>
 qui s'accumule à l'émotion<br>
@@ -97,10 +97,6 @@ bien que les écrans<br>
 aient asséché le chemin des larmes<br>
 les fontaines dont l'eau brille<br>
 même de vieille pierre usée<br>
-pollution notre état<br>
-mes ongles colorés<br>
-paradoxe voisin<br>
-sont le rêve de pouvoir<br>
 <br>
 </p>
 
@@ -109,18 +105,11 @@ sont le rêve de pouvoir<br>
 <p>
 <mark>02</mark><br>
 <br>
-Les fontaines<br>
-dont l'eau brille<br>
-pierre usée<br>
-il m'avoue ne pas avoir tout pigé<br>
-il me dit que ce n'est pas la forme qui lui a plu<br>
-je continue dans le doute<br>
-avec un taux de 77% d'humidité dans la pièce<br>
+Le visage de ma petite soeur<br>
+qui rigole éblouie à l'arrière du bus<br>
+incertaine de l'attidude des corps<br>
+qui se dirigent vers elle<br>
 <br>
-Les rastas disent que quand deux 7 se croisent<br>
-il se passe forcément quelque chose<br>
-c'est le côté espagnol des rastas<br>
-ils parlent tout le temps<br>
 </p>
 
 <br><br><br><br>
