--- a/index.html
+++ b/index.html
@@ -79,22 +79,19 @@ Chapitre 01<br>
 <p>
 <mark>01</mark><br>       
 <br>
-Nos lèvres à l'entrée<br>
-de la bouche du métro<br>
-nous allons creuser un tunnel<br>
-et traverser<br>
-le sous-sol de la violence<br>
-ta capuche à cheveux<br>
+Nous allons creuser un tunnel<br>
+nos lèvres à l'entrée de la bouche du métro<br>
+et traverser le sous-sol de la violence<br>
+la capuche chevelue<br>
 le K-Way ruisselant<br>
-nous sommes la frontière cobaye<br>
+ici la frontière cobaye<br>
 entre la terre et l'espace<br>
 fait de désarroi intime<br>
 harpon de la solitude<br>
-nous cherchons<br>
-à détruire le fond angoissé<br>
-qui s'accumule à l'émotion<br>
-bien que les écrans<br>
-aient asséché le chemin des larmes<br>
+détruire le fond angoissé<br>
+accumulé à l'émotion<br>
+bien que les écrans asséchent<br>
+le chemin des larmes<br>
 les fontaines dont l'eau brille<br>
 même de vieille pierre usée<br>
 <br>
