--- a/index.html
+++ b/index.html
@@ -86,24 +86,19 @@ la capuche chevelue<br>
 le K-Way ruisselant<br>
 ici la frontière cobaye<br>
 entre la terre et l'espace<br>
-fait de désarroi intime<br>
+désarroi intime<br>
 harpon de la solitude<br>
-détruire le fond angoissé<br>
-accumulé à l'émotion<br>
-bien que les écrans asséchent<br>
-le chemin des larmes<br>
-les fontaines dont l'eau brille<br>
-même de vieille pierre usée<br>
-<br>
-</p>
-
-<br><br><br><br>
-
-<p>
-<mark>02</mark><br>
-<br>
-Le visage de ma petite soeur<br>
-qui rigole éblouie à l'arrière du bus<br>
+destruction du fond angoissé collant<br>
+à l'émotion<br>
+bien que les écrans asséchent le chemin des larmes<br>
+que je sois armé de Vismed<br>
+les fontaines de l'eau-brille<br>
+sale en surface<br>
+et rare au fond<br>
+plaie de la vieille pierre usée<br>
+laboratoire mutant<br>
+le visage de ma petite soeur<br>
+qui rigole éblouie<br>
 incertaine de l'attidude des corps<br>
 qui se dirigent vers elle<br>
 <br>
@@ -112,18 +107,28 @@ qui se dirigent vers elle<br>
 <br><br><br><br>
 
 <p>
+<mark>02</mark><br>
+<br>
+Je me sens égoïste<br>
+au coeur de la foule<br>
+innocent et sans voix<br>
+je respire<br>
+<br>
+</p>
+
+<br><br><br><br>
+
+<p>
 <mark>03</mark><br>
 <br>
-Brian a lu mes textes<br>
-il m'avoue ne pas avoir tout pigé<br>
-il me dit que ce n'est pas la forme qui lui a plu<br>
-je continue dans le doute<br>
-avec un taux de 77% d'humidité dans la pièce<br>
+J'ai plein à boire<br>
+je me gave de chips et de café<br>
+je mange des canettes<br>
+je me bouffe les doigts<br>
+je te dépouille<br>
+je suis seul dans la peau<br>
+d'un homme seul<br>
 <br>
-Les rastas disent que quand deux 7 se croisent<br>
-il se passe forcément quelque chose<br>
-c'est le côté espagnol des rastas<br>
-ils parlent tout le temps<br>
 </p>
 
 <br><br><br><br>
