--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ qui se dirigent vers elle<br>
 <br>
 Je me sens égoïste<br>
 au coeur de la foule<br>
-innocent et sans voix<br>
-je respire<br>
+sans voix<br>
+je respire la peur<br>
 <br>
 </p>
 
