--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@ entre la terre et l'espace<br>
 désarroi intime<br>
 harpon de la solitude<br>
 destruction du fond angoissé collant<br>
-à l'émotion<br>
 bien que les écrans asséchent le chemin des larmes<br>
 que je sois armé de Vismed<br>
 les fontaines de l'eau-brille<br>
 sale en surface<br>
-et rare au fond<br>
+rare au fond<br>
 plaie de la vieille pierre usée<br>
 laboratoire mutant<br>
 le visage de ma petite soeur<br>
