--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ J'ai plein à boire<br>
 je me gave de chips et de café<br>
 je mange des canettes<br>
 je me bouffe les doigts<br>
-je te dépouille<br>
+je me dépouille<br>
 je suis seul dans la peau<br>
-d'un homme seul<br>
+d'un seul homme<br>
 <br>
 </p>
 
