--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Chapitre 01<br>
 <br>
 Nous allons creuser un tunnel<br>
 nos lèvres à l'entrée de la bouche du métro<br>
-et traverser le sous-sol de la violence<br>
+traverser le sous-sol de la violence<br>
 la capuche chevelue<br>
 le K-Way ruisselant<br>
 ici la frontière cobaye<br>
