--- a/index.html
+++ b/index.html
@@ -135,16 +135,24 @@ d'un seul homme<br>
 <p>
 <mark>04</mark><br>
 <br>
-Brian a lu mes textes<br>
-il m'avoue ne pas avoir tout pigé<br>
-il me dit que ce n'est pas la forme qui lui a plu<br>
-je continue dans le doute<br>
-avec un taux de 77% d'humidité dans la pièce<br>
-<br>
-Les rastas disent que quand deux 7 se croisent<br>
-il se passe forcément quelque chose<br>
-c'est le côté espagnol des rastas<br>
-ils parlent tout le temps<br>
+Je voudrais bosser dur pour un patron<br>
+j'en pleure chaque matin de chomage<br>
+je voudrais que le fric coule<br>
+enculer ce banquier<br>
+qui ne lit plus mes mails<br>
+le trouver sur la plage<br>
+et lui défoncer la gueule<br>
+je pense aux vacances<br>
+les yeux pleins de glande<br>
+avec toujours les mêmes convultions qui me tordent<br>
+je veux la bouche grande ouverte<br>
+bouffer tous les fruits de l'éxistence<br>
+je veux le temps de l'été<br>
+sentir ta peau au delà de mon imaginaire<br>
+je veux parier et jouer avec toi<br>
+comme dans le temps où nous étions amis<br>
+nous disions sans cesse qui vivra verra<br>
+
 </p>
 
 <br><br><br><br>
