--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@ sentir ta peau au delà de mon imaginaire<br>
 je veux parier et jouer avec toi<br>
 comme dans le temps où nous étions amis<br>
 nous disions sans cesse qui vivra verra<br>
+ma vie est une balle perdue<br>
+à la recherche d'un obstacle<br>
+ma vie est un mur<br>
+sur lequel je tague<br>
 
 </p>
 
