--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ d'un seul homme<br>
 Je voudrais bosser dur pour un patron<br>
 j'en pleure chaque matin de chomage<br>
 je voudrais que le fric coule<br>
-enculer ce banquier<br>
+et ce banquier<br>
 qui ne lit plus mes mails<br>
 le trouver sur la plage<br>
 et lui défoncer la gueule<br>
@@ -146,7 +146,7 @@ je pense aux vacances<br>
 les yeux pleins de glande<br>
 avec toujours les mêmes convultions qui me tordent<br>
 je veux la bouche grande ouverte<br>
-bouffer tous les fruits de l'éxistence<br>
+bouffer les fruits de l'éxistence<br>
 je veux le temps de l'été<br>
 sentir ta peau au delà de mon imaginaire<br>
 je veux parier et jouer avec toi<br>
@@ -156,6 +156,21 @@ ma vie est une balle perdue<br>
 à la recherche d'un obstacle<br>
 ma vie est un mur<br>
 sur lequel je tague<br>
+l'obstacle est ma vie<br>
+sur laquelle j'écris<br>
+impuissant face au monde<br>
+impuissant face à la vie<br>
+impuissant face à l'amour<br>
+sur lequel j'écris<br>
+tu ne peux pas savoir<br>
+pourquoi je passe mon temps à rire<br>
+perdu au milieu de l'ambiance<br>
+à l'aise au milieu de l'été<br>
+découvrant la beauté des genres<br>
+une nouvelle fois, comme à chaque écoute<br>
+les notes de Springtime de Leatherface me transpercent<br>
+je fuis un instant pour le mieux<br>
+<br>
 
 </p>
 
