--- a/index.html
+++ b/index.html
@@ -158,18 +158,15 @@ ma vie est un mur<br>
 sur lequel je tague<br>
 l'obstacle est ma vie<br>
 sur laquelle j'écris<br>
-impuissant face au monde<br>
-impuissant face à la vie<br>
-impuissant face à l'amour<br>
-sur lequel j'écris<br>
-tu ne peux pas savoir<br>
+impuissant<br>
+impuissant face à face<br>
+tu decrais pouvoir savoir<br>
 pourquoi je passe mon temps à rire<br>
-perdu au milieu de l'ambiance<br>
-à l'aise au milieu de l'été<br>
+perdu dans l'ambiance<br>
 découvrant la beauté des genres<br>
 une nouvelle fois, comme à chaque écoute<br>
 les notes de Springtime de Leatherface me transpercent<br>
-je fuis un instant pour le mieux<br>
+je fuis un instant<br>
 <br>
 
 </p>
