--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	  
 	     
 <br><br><br><br>
-NOUVELLES<br>
+MASQUE DE CUIR<br>
 par Charlie Batalla<br>
 <br>
 <mark>-</mark> <a href="https://lcrtr.github.io/nouvelles/index">Chapitre 01</a><br>
