--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ qui se dirigent vers elle<br>
 <mark>02</mark><br>
 <br>
 Je me sens égoïste<br>
+comme souvent<br>
 au coeur de la foule<br>
 sans voix<br>
 je respire la peur<br>
