--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@ Chapitre 01<br>
 <mark>01</mark><br>       
 <br>
 Nous allons creuser un tunnel<br>
-nos lèvres à l'entrée de la bouche du métro<br>
+lèvres à l'entrée de la bouche du métro<br>
 traverser le sous-sol de la violence<br>
 la capuche chevelue<br>
 le K-Way ruisselant<br>
 ici la frontière cobaye<br>
 entre la terre et l'espace<br>
-désarroi intime<br>
+le désarroi intime<br>
 harpon de la solitude<br>
 destruction du fond angoissé collant<br>
 bien que les écrans asséchent le chemin des larmes<br>
 que je sois armé de Vismed<br>
-les fontaines de l'eau-brille<br>
+les fontaines à eau-brille<br>
 sale en surface<br>
 rare au fond<br>
 plaie de la vieille pierre usée<br>
@@ -110,7 +110,6 @@ qui se dirigent vers elle<br>
 <br>
 Je me sens égoïste<br>
 comme souvent<br>
-au coeur de la foule<br>
 sans voix<br>
 je respire la peur<br>
 <br>
@@ -140,7 +139,7 @@ Je voudrais bosser dur pour un patron<br>
 j'en pleure chaque matin de chomage<br>
 je voudrais que le fric coule<br>
 et ce banquier<br>
-qui ne lit plus mes mails<br>
+qui ne lit pas mes mails<br>
 le trouver sur la plage<br>
 et lui défoncer la gueule<br>
 je pense aux vacances<br>
@@ -150,9 +149,10 @@ je veux la bouche grande ouverte<br>
 bouffer les fruits de l'éxistence<br>
 je veux le temps de l'été<br>
 sentir ta peau au delà de mon imaginaire<br>
-je veux parier et jouer avec toi<br>
+parier et jouer avec toi<br>
 comme dans le temps où nous étions amis<br>
-nous disions sans cesse qui vivra verra<br>
+nous disions sans cesse<br>
+qui vivra verra<br>
 ma vie est une balle perdue<br>
 à la recherche d'un obstacle<br>
 ma vie est un mur<br>
@@ -161,15 +161,26 @@ l'obstacle est ma vie<br>
 sur laquelle j'écris<br>
 impuissant<br>
 impuissant face à face<br>
-tu decrais pouvoir savoir<br>
+tu devrais pouvoir savoir<br>
 pourquoi je passe mon temps à rire<br>
 perdu dans l'ambiance<br>
 découvrant la beauté des genres<br>
 une nouvelle fois, comme à chaque écoute<br>
 les notes de Springtime de Leatherface me transpercent<br>
-je fuis un instant<br>
 <br>
+</p>
 
+<p>
+<mark>03</mark><br>
+<br>
+J'ai plein à boire<br>
+je me gave de chips et de café<br>
+je mange des canettes<br>
+je me bouffe les doigts<br>
+je me dépouille<br>
+je suis seul dans la peau<br>
+d'un seul homme<br>
+<br>
 </p>
 
 <br><br><br><br>
