--- a/index.html
+++ b/index.html
@@ -173,13 +173,40 @@ les notes de Springtime de Leatherface me transpercent<br>
 <p>
 <mark>03</mark><br>
 <br>
-J'ai plein à boire<br>
-je me gave de chips et de café<br>
-je mange des canettes<br>
-je me bouffe les doigts<br>
-je me dépouille<br>
-je suis seul dans la peau<br>
-d'un seul homme<br>
+Ces yeux étonnés<br>
+face au hauts parleurs<br>
+au milieu du salon improvisé<br>
+un bruit de gorge<br>
+un bruit de ventre<br>
+bouteille<br>
+veste claire<br>
+un chapeau<br>
+porte ouverte<br>
+<br>
+</p>
+
+<p>
+<mark>03</mark><br>
+<br>
+Je me trouve dans la chambre<br>
+une nuit où Hélène est de garde<br>
+allongé dans le lit<br>
+j'ai trouvé le moment pour profiter de la fatigue<br>
+j'entends du bruit<br>
+les yeux fermés je suis comme ce mec<br>
+qui faisait des test de séropositivité<br>
+tous les deux mois<br>
+alors qu'il n'avait aucune relation sexuelle<br>
+je crois que je suis saoul<br>
+alors que je n'ai rien bu<br>
+c'est difficile à expliquer<br>
+disons, que je suis dans le lit<br>
+un samedi soir de 2006<br>
+à Reims, ville très connue<br>
+pour le nombre de magasins de chaussures<br>
+qu'il y a sur la place<br>
+
+
 <br>
 </p>
 
