--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Chapitre 01<br>
 <mark>01</mark><br>       
 <br>
 Nous allons creuser un tunnel<br>
-lèvres à l'entrée de la bouche du métro<br>
+nos lèvres à l'entrée de la bouche du métro<br>
 traverser le sous-sol de la violence<br>
 la capuche chevelue<br>
 le K-Way ruisselant<br>
@@ -158,7 +158,7 @@ ma vie est une balle perdue<br>
 ma vie est un mur<br>
 sur lequel je tague<br>
 l'obstacle est ma vie<br>
-sur laquelle j'écris<br>
+sur lequel j'écris<br>
 impuissant<br>
 impuissant face à face<br>
 tu devrais pouvoir savoir<br>
@@ -201,7 +201,7 @@ je crois que je suis saoul<br>
 alors que je n'ai rien bu<br>
 c'est difficile à expliquer<br>
 disons, que je suis dans le lit<br>
-un samedi soir de 2006<br>
+un samedi soir de 2005<br>
 à Reims, ville très connue<br>
 pour le nombre de magasins de chaussures<br>
 qu'il y a sur la place<br>
