--- a/index.html
+++ b/index.html
@@ -77,23 +77,24 @@ Chapitre 01<br>
 <br>
  
 <p>
-<mark>01</mark><br>       
+<mark>---</mark><br>       
 <br>
-Nous allons creuser un tunnel<br>
+nous allons creuser un tunnel<br>
 nos lèvres à l'entrée de la bouche du métro<br>
-traverser le sous-sol de la violence<br>
+nous allons traverser le sous-sol de la violence<br>
 la capuche chevelue<br>
 le K-Way ruisselant<br>
-ici la frontière cobaye<br>
+de la frontière cobaye<br>
 entre la terre et l'espace<br>
 le désarroi intime<br>
 harpon de la solitude<br>
-destruction du fond angoissé collant<br>
+la destruction du fond angoissé collant<br>
 bien que les écrans asséchent le chemin des larmes<br>
 que je sois armé de Vismed<br>
-les fontaines à eau-brille<br>
+les fontaines à eau-<br>
+brille<br>
 sale en surface<br>
-rare au fond<br>
+rare en profondeur<br>
 plaie de la vieille pierre usée<br>
 laboratoire mutant<br>
 le visage de ma petite soeur<br>
@@ -101,24 +102,10 @@ qui rigole éblouie<br>
 incertaine de l'attidude des corps<br>
 qui se dirigent vers elle<br>
 <br>
-</p>
-
-<br><br><br><br>
-
-<p>
-<mark>02</mark><br>
-<br>
 Je me sens égoïste<br>
 comme souvent<br>
 sans voix<br>
 je respire la peur<br>
-<br>
-</p>
-
-<br><br><br><br>
-
-<p>
-<mark>03</mark><br>
 <br>
 J'ai plein à boire<br>
 je me gave de chips et de café<br>
@@ -128,60 +115,51 @@ je me dépouille<br>
 je suis seul dans la peau<br>
 d'un seul homme<br>
 <br>
-</p>
-
-<br><br><br><br>
-
-<p>
-<mark>04</mark><br>
-<br>
-Je voudrais bosser dur pour un patron<br>
+je voudrais beaucoup de choses<br>
 j'en pleure chaque matin de chomage<br>
 je voudrais que le fric coule<br>
+<br>
 et ce banquier<br>
 qui ne lit pas mes mails<br>
 le trouver sur la plage<br>
 et lui défoncer la gueule<br>
 je pense aux vacances<br>
 les yeux pleins de glande<br>
-avec toujours les mêmes convultions qui me tordent<br>
+avec toujours les mêmes convultions<br>
 je veux la bouche grande ouverte<br>
 bouffer les fruits de l'éxistence<br>
 je veux le temps de l'été<br>
 sentir ta peau au delà de mon imaginaire<br>
-parier et jouer avec toi<br>
+parier et jouer<br>
 comme dans le temps où nous étions amis<br>
 nous disions sans cesse<br>
 qui vivra verra<br>
+<br>
 ma vie est une balle perdue<br>
 à la recherche d'un obstacle<br>
-ma vie est un mur<br>
-sur lequel je tague<br>
+ma vie est un mur sur lequel je tague<br>
 l'obstacle est ma vie<br>
-sur lequel j'écris<br>
-impuissant<br>
+sur lequel j'écris impuissant<br>
 impuissant face à face<br>
-tu devrais pouvoir savoir<br>
+face to face<br>
+toi peut être que tu sais<br>
 pourquoi je passe mon temps à rire<br>
 perdu dans l'ambiance<br>
-découvrant la beauté des genres<br>
-une nouvelle fois, comme à chaque écoute<br>
-les notes de Springtime de Leatherface me transpercent<br>
-<br>
-</p>
-
-<p>
-<mark>03</mark><br>
-<br>
-Ces yeux étonnés<br>
+une nouvelle fois<br>
+comme à chaque écoute<br>
+les notes de Springtime de Leatherface<br>
+transpercent les murs<br>
+il s'agit typiquement du genre de morceau<br>
+que j'aime faire profiter aux voisins<br>
+<br>>
+ces yeux étonnés<br>
 face au hauts parleurs<br>
 au milieu du salon improvisé<br>
-un bruit de gorge<br>
-un bruit de ventre<br>
 bouteille<br>
 veste claire<br>
 un chapeau<br>
 porte ouverte<br>
+bruit de ventre<br>
 <br>
 </p>
 
