--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ qui rigole éblouie<br>
 incertaine de l'attidude des corps<br>
 qui se dirigent vers elle<br>
 <br>
-Je me sens égoïste<br>
+je me sens égoïste<br>
 comme souvent<br>
 sans voix<br>
 je respire la peur<br>
 <br>
-J'ai plein à boire<br>
+j'ai plein à boire<br>
 je me gave de chips et de café<br>
 je mange des canettes<br>
 je me bouffe les doigts<br>
@@ -166,7 +166,7 @@ bruit de ventre<br>
 <p>
 <mark>03</mark><br>
 <br>
-Je me trouve dans la chambre<br>
+je me trouve dans la chambre<br>
 une nuit où Hélène est de garde<br>
 allongé dans le lit<br>
 j'ai trouvé le moment pour profiter de la fatigue<br>
