--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@ nos lèvres à l'entrée de la bouche du métro<br>
 nous allons traverser le sous-sol de la violence<br>
 la capuche chevelue<br>
 le K-Way ruisselant<br>
-de la frontière cobaye<br>
-entre la terre et l'espace<br>
+de la frontière cobaye entre la terre et l'espace<br>
 le désarroi intime<br>
-harpon de la solitude<br>
+drapé de la solitude<br>
 la destruction du fond angoissé collant<br>
 bien que les écrans asséchent le chemin des larmes<br>
 que je sois armé de Vismed<br>
