--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ la capuche chevelue<br>
 le K-Way ruisselant<br>
 de la frontière cobaye entre la terre et l'espace<br>
 le désarroi intime<br>
-drapé de la solitude<br>
+près de la solitude<br>
 la destruction du fond angoissé collant<br>
 bien que les écrans asséchent le chemin des larmes<br>
 que je sois armé de Vismed<br>
