--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ de la frontière cobaye entre la terre et l'espace<br>
 le désarroi intime<br>
 près de la solitude<br>
 la destruction du fond angoissé collant<br>
+<br>
 bien que les écrans asséchent le chemin des larmes<br>
 que je sois armé de Vismed<br>
-les fontaines à eau-<br>
-brille<br>
+les fontaines à eau-brille<br>
 sale en surface<br>
 rare en profondeur<br>
 plaie de la vieille pierre usée<br>
