--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ plaie de la vieille pierre usée<br>
 laboratoire mutant<br>
 le visage de ma petite soeur<br>
 qui rigole éblouie<br>
-incertaine de l'attidude des corps<br>
+incertaine de l'attidude de ses frêres<br>
 qui se dirigent vers elle<br>
 <br>
 je me sens égoïste<br>
