--- a/index.html
+++ b/index.html
@@ -106,15 +106,13 @@ comme souvent<br>
 sans voix<br>
 je respire la peur<br>
 <br>
-j'ai plein à boire<br>
-je me gave de chips et de café<br>
+j'ai à boire<br>
+je des chips et du café<br>
 je mange des canettes<br>
 je me bouffe les doigts<br>
 je me dépouille<br>
-je suis seul dans la peau<br>
-d'un seul homme<br>
-<br>
-je voudrais beaucoup de choses<br>
+je suis seul dans la peau d'un seul homme<br>
+qui voudrait beaucoup de choses<br>
 j'en pleure chaque matin de chomage<br>
 je voudrais que le fric coule<br>
 <br>
