--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ je me bouffe les doigts<br>
 je me dépouille<br>
 je suis seul dans la peau d'un seul homme<br>
 qui voudrait beaucoup de choses<br>
-j'en pleure chaque matin de chomage<br>
+j'y pense chaque matin de chomage<br>
 je voudrais que le fric coule<br>
 <br>
 et ce banquier<br>
