--- a/index.html
+++ b/index.html
@@ -114,32 +114,30 @@ je me dépouille<br>
 je suis seul dans la peau d'un seul homme<br>
 qui voudrait beaucoup de choses<br>
 j'y pense chaque matin de chomage<br>
-je voudrais que le fric coule<br>
-<br>
+je voudrais que le fric coule !<br>
 et ce banquier<br>
-qui ne lit pas mes mails<br>
-le trouver sur la plage<br>
-et lui défoncer la gueule<br>
+qui ne lit pas les mails<br>
+le trouver sur la plage et lui défoncer la gueule<br>
 je pense aux vacances<br>
-les yeux pleins de glande<br>
+les yeux plein de glande<br>
 avec toujours les mêmes convultions<br>
 je veux la bouche grande ouverte<br>
 bouffer les fruits de l'éxistence<br>
 je veux le temps de l'été<br>
+en croquer<br>
 sentir ta peau au delà de mon imaginaire<br>
 parier et jouer<br>
-comme dans le temps où nous étions amis<br>
-nous disions sans cesse<br>
-qui vivra verra<br>
+comme au temps où nous étions amis<br>
+nous disions sans cesse qui vivra verra<br>
 <br>
 ma vie est une balle perdue<br>
 à la recherche d'un obstacle<br>
 ma vie est un mur sur lequel je tague<br>
 l'obstacle est ma vie<br>
-sur lequel j'écris impuissant<br>
+sur lequel j'écris<br>
 impuissant face à face<br>
 face to face<br>
-toi peut être que tu sais<br>
+toi peut être que tu sais quelque chose<br>
 pourquoi je passe mon temps à rire<br>
 perdu dans l'ambiance<br>
 une nouvelle fois<br>
@@ -148,38 +146,80 @@ les notes de Springtime de Leatherface<br>
 transpercent les murs<br>
 il s'agit typiquement du genre de morceau<br>
 que j'aime faire profiter aux voisins<br>
-<br>>
-ces yeux étonnés<br>
-face au hauts parleurs<br>
+ces grands yeux étonnés<br>
+devant les hauts parleurs<br>
 au milieu du salon improvisé<br>
 bouteille<br>
-veste claire<br>
-un chapeau<br>
+veste rouge<br>
+chapeau<br>
 porte ouverte<br>
-bruit de ventre<br>
+ouverture en tout genre<br>
 <br>
-</p>
-
-<p>
-<mark>03</mark><br>
-<br>
+nous sommes en 2005<br>
 je me trouve dans la chambre<br>
 une nuit où Hélène est de garde<br>
 allongé dans le lit<br>
 j'ai trouvé le moment pour profiter de la fatigue<br>
 j'entends du bruit<br>
 les yeux fermés je suis comme ce mec<br>
-qui faisait des test de séropositivité<br>
-tous les deux mois<br>
+qui faisait des test de séropositivité tous les deux mois<br>
 alors qu'il n'avait aucune relation sexuelle<br>
 je crois que je suis saoul<br>
 alors que je n'ai rien bu<br>
-c'est difficile à expliquer<br>
 disons, que je suis dans le lit<br>
-un samedi soir de 2005<br>
-à Reims, ville très connue<br>
-pour le nombre de magasins de chaussures<br>
-qu'il y a sur la place<br>
+un samedi soir à Reims, ville très connue<br>
+pour son nombre de magasins de chaussures<br>
+<br>
+je somnole<br>
+je suis dans un état proche de l'Ohio<br>
+derrière la gare à côté d'Intermarché<br>
+où j'ai acheté des crevettes<br>
+et me suis retrouvé à l'hopital<br>
+après une infection au colomb foudroyante<br>
+saleté de fruits de mer crado<br>
+j'aperçois une tête qui me regarde au dessus du lit<br>
+je suis dans le gaz<br>
+il y a un mec dans la chambre<br>
+brun<br>
+barbe fine<br>
+les gros yeux<br>
+bizarrement je reste calme<br>
+je suis à poil sous les draps<br>
+je lui demande d'aller m'attendre dans la pièce à côté<br>
+le temps que je m'habille<br>
+il me regarde en hurlant :<br>
+uts punx !<br>
+uts punx !<br>
+uts punx !<br>
+uts punx ! qu'il me dit<br>
+mais quoi uts punx ?<br>
+je me rends compte qu'il lit<br>
+ce qu'il y a d'écrit sur mon tee-shirt<br>
+uts punx !<br>
+uts punx !<br>
+je lui propose un verre d'eau<br>
+il accepte<br>
+je ne comprends pas ce qu'il dit<br>
+il est dos à la porte d'entrée<br>
+il la bloque<br>
+j'ai envie de quitter la pièce<br>
+sur la table à côté de lui il y a un grand couteau<br>
+très très bien aiguisé<br>
+je suis pieds nus en slip avec un tee shirt uts punx !<br>
+je commence à me dire qu'il va me découper<br>
+je lui fonce dessus il s'éclate contre le mur<br>
+je sors de l'appart et me trouve dans la cage d'escalier<br>
+aucun bruit, j'allume la lumière<br>
+il est toujours dans l'appart<br>
+je suis pieds nus en slip avec un tee shirt uts punx !<br>
+sur lequel est dessiné une cuvette à chiottes<br>
+j'ai pas l'air con<br>
+
+
+<br>
+
+
+
 
 
 <br>
