--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ je me sens égoïste<br>
 comme souvent<br>
 sans voix<br>
 je respire la peur<br>
+et je m'offre à vous<br>
 <br>
 j'ai à boire<br>
 je des chips et du café<br>
@@ -174,8 +175,9 @@ je suis dans un état proche de l'Ohio<br>
 derrière la gare à côté d'Intermarché<br>
 où j'ai acheté des crevettes<br>
 et me suis retrouvé à l'hopital<br>
-après une infection au colomb foudroyante<br>
+après une infection du colomb foudroyante<br>
 saleté de fruits de mer crado<br>
+<br>
 je somnole<br>
 j'aperçois une tête qui me regarde au dessus du lit<br>
 je suis dans le gaz<br>
@@ -185,7 +187,7 @@ barbe fine<br>
 les gros yeux<br>
 bizarrement je reste calme<br>
 je suis à poil sous les draps<br>
-je lui demande d'aller m'attendre dans la pièce à côté<br>
+je lui demande d'aller attendre dans la pièce à côté<br>
 le temps que je m'habille<br>
 il me regarde en hurlant :<br>
 uts punx !<br>
@@ -209,11 +211,12 @@ je suis pieds nus en slip avec un tee shirt uts punx !<br>
 je commence à me dire qu'il va me découper<br>
 je lui fonce dessus il s'éclate contre le mur<br>
 je sors de l'appart et me trouve dans la cage d'escalier<br>
-aucun bruit, j'allume la lumière<br>
+aucun bruit j'allume la lumière<br>
 il est toujours dans l'appart<br>
 je suis pieds nus en slip avec un tee shirt uts punx !<br>
 sur lequel est dessiné une cuvette à chiottes<br>
 j'ai pas l'air con<br>
+
 
 
 <br>
